<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffecd1"
    android:padding="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/calculate_textview"
            android:textColor="#14616d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#14616d"
            android:padding="10dp"
            android:text="@string/age_textview"
            android:textColor="#ffecd1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/min_textview"
            android:textColor="#14616d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#14616d"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/button_text"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/selectedDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/selected_view"
            android:textColor="#14616d"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minutesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_view"
            android:textColor="#14616d"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>